[project]
name = "dbhandler"
dynamic = ["version"]
description="db wrapper class"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pysen",
    "flake8",
    "mypy",
    "black",
    "isort<6",
    "build",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbhandler"]

[tool.hatch.build]
include = [
    "src/dbhandler/*.py",
]
exclude = []

[tool.hatch.version]
path = "src/dbhandler/__init__.py"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[tool.pysen]
version = "0.11.0"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "entry"
line_length = 88
py_version = "py311"

[[tool.pysen.lint.mypy_targets]]
paths = [
    "./src/"
]

[tool.pysen.lint.source]
includes = [
    "./src/",
    "./tests/",
]
